#74 Listener dashboard: add welcome back message, fix "show more" button visibility

--- a/frontend/src/assets/css/common.css
+++ b/frontend/src/assets/css/common.css
@@ -65,6 +65,10 @@ a:hover {
     @apply px-3 py-2 border-2 rounded-lg border-indigo-100 bg-indigo-200 
 }
 
+.content-block {
+    @apply p-4 border-2 rounded-lg border-indigo-100 bg-indigo-200
+}
+
 /* Intended for heroicons */
 .icon {
     @apply h-4 inline
